update: finalize me module api docs
